--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Elijah Prince <elijahprince73@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "nodemon": "^1.19.2"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
