--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "graphql-yoga": "^1.18.3",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "prisma-client-lib": "^1.34.8"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   }
 }
